fix alignment of land lots

--- a/app/assets/stylesheets/lands.scss
+++ b/app/assets/stylesheets/lands.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-content: center;
   margin-bottom: 5em;
 }
